--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,7 +95,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/_50"
-                app:layout_constraintTop_toBottomOf="@+id/enterStartQuantityLabel"/>
+                app:layout_constraintTop_toBottomOf="@+id/enterStartQuantityLabel"
+                android:autofillHints=""
+                android:inputType="numberDecimal"
+                tools:ignore="LabelFor" />
 
 
             <!-- -->
@@ -111,7 +114,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/_99"
-                app:layout_constraintTop_toBottomOf="@+id/enterDegradationLabel"/>
+                app:layout_constraintTop_toBottomOf="@+id/enterDegradationLabel"
+                android:autofillHints=""
+                android:inputType="numberDecimal"
+                tools:ignore="LabelFor" />
 
 
 
@@ -127,7 +133,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/_20"
-                app:layout_constraintTop_toBottomOf="@+id/enterGrowTempLabel"/>
+                app:layout_constraintTop_toBottomOf="@+id/enterGrowTempLabel"
+                android:autofillHints=""
+                android:inputType="numberDecimal"
+                tools:ignore="LabelFor" />
 
             <TextView
                 android:id="@+id/enterHoursLabel"
@@ -141,7 +150,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/_36"
-                app:layout_constraintTop_toBottomOf="@+id/enterHoursLabel"/>
+                app:layout_constraintTop_toBottomOf="@+id/enterHoursLabel"
+                android:autofillHints=""
+                android:inputType="numberDecimal"
+                tools:ignore="LabelFor" />
 
             <TextView
                 android:id="@+id/enterUVDoseLabel"
@@ -155,7 +167,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/_350885_8888"
-                app:layout_constraintTop_toBottomOf="@+id/enterUVDoseLabel"/>
+                app:layout_constraintTop_toBottomOf="@+id/enterUVDoseLabel"
+                android:autofillHints=""
+                android:inputType="numberDecimal"
+                tools:ignore="LabelFor" />
 
             <Button
                 android:id="@+id/getDataButton"
@@ -163,6 +178,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/get_data"
                 app:layout_constraintTop_toBottomOf="@+id/enterUVDose"/>
+
             <Button
                 android:id="@+id/goButton"
                 android:layout_width="match_parent"
