--- a/app/src/main/res/layout/activity_update_project.xml
+++ b/app/src/main/res/layout/activity_update_project.xml
@@ -35,7 +35,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/_1"
-                app:layout_constraintTop_toBottomOf="@+id/enterHoursLabel"/>
+                app:layout_constraintTop_toBottomOf="@+id/enterHoursLabel"
+                android:autofillHints=""
+                android:inputType="numberDecimal"
+                tools:ignore="LabelFor" />
 
             <TextView
                 android:id="@+id/enterUVDoseLabel"
@@ -49,7 +52,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/_350885_8888"
-                app:layout_constraintTop_toBottomOf="@+id/enterUVDoseLabel"/>
+                app:layout_constraintTop_toBottomOf="@+id/enterUVDoseLabel"
+                android:autofillHints=""
+                android:inputType="numberDecimal"
+                tools:ignore="LabelFor" />
 
             <Button
                 android:id="@+id/updateButton"
