--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -149,7 +149,7 @@
                 android:id="@+id/enterHours"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/grow_hours"
+                android:text="@string/default_grow_hours"
                 app:layout_constraintTop_toBottomOf="@+id/enterHoursLabel"
                 android:autofillHints=""
                 android:inputType="numberDecimal"
